== Change Log

=== Edge

* Make UserActionObserver thread safe [Mark Reginald James]
* Speedup recursive snippet usage [Andrew O'Brian, Jim Gay]
* Use <r:cycle /> for a numeric counter [Jim Gay, Dirk Kelly]
* String format breadcrumb tag in archive pages [Oriol Gual]
* Fix bug with deletion of page parts [Josh French]
* Unroll PageMenu into core [Josh French]
* Update Haml to 3.0.23 [Jim Gay]
* Localize <r:date> [Jim Gay]
* Make any date column a valid value for <r:date /> [Jim Gay]
* Move url methods to path [Jim Gay]
* Allow use of custom TextFilter names[Petrik de Heus]
* Set autocomplete="off" for password fields [Gert Goet]
* Allow loading of database templates from extensions [Jim Gay]
* Restore Roasters template styling [Jim Gay]
* Integrated PageFields extension into core [Josh French]
* Added the Sheets extension to manage Javascript and Stylesheets [Jim Gay]
* Page-type select menu moved to Pages#index [Josh French]
* Allow gem-extensions to override core views [Josh French]
* Popup.js fix for multiple control instances [Josh French]

=== Refraction 0.9.1 (June 27, 2010)

* Added missing i18n translations for aggregate tages [Jim Gay]
* Fixed a bug with status_id PostgreSQL [Jim Gay]

=== Refraction 0.9.0 (June 25, 2010)

* Pull in aggregate tags from the aggregation extension [John Muhl, Sean Cribbs, Jim Gay]
* Fixed a bug which could cause the preferences submenu to dissapear [Mario Visic, Jim Gay]
* Fixed a bug PostgreSQL for creating pages with nested attributes [Andrew Cates]
* Updated to Rails 2.3.8 [Jim Gay]
* Added admin and Radius tag pagination [William Ross]
* Added will_paginate dependency [William Ross, Jim Gay]
* Added <r:gravatar/> radius tag [John Muhl]
* Exposed important view locals for partials that hook into the admin UI [Mislav Marohnić]
* Update to cucumber-rails 0.3.0 [Jim Gay]
* Update to Haml 2.2.24 [Jim Gay]
* Allow loading extension routes from the extension's config/routes.rb [Jim Gay]