@@ -2,6 +2,7 @@
 
 === Edge
 
+* Allow pagination in aggregated pages [Jim Gay]
 * Make UserActionObserver thread safe [Mark Reginald James]
 * Speedup recursive snippet usage [Andrew O'Brian, Jim Gay]
 * Use <r:cycle /> for a numeric counter [Jim Gay, Dirk Kelly]
